pyrene/src/components/Banner/banner.css
@import '../../styles/colors.css';

.banner {
  composes: commonFontSettings from '../../styles/common.css';
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: space-between;
  font-size: 13px;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: normal;
  border-radius: 2px;
  background-color: var(--background-light);
  position: relative;

  border-radius: 2px;

  &.style-overlay {
    margin-bottom: 8px;
  }

  &.style-standard, &.style-overlay {
    padding: 15px 16px 14px 16px;
    min-height: 48px;

    & .message {
      font-weight: 500;
    }
  }

  &.style-inline {
    min-height: 32px;

    & .message {
      line-height: 16px;
    }
  }
  &.style-standard::before,
  &.style-overlay::before {
     content: "";
     width: 3px;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
   }

  &.type-info {
    &.style-standard {
      box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3);
  }

    &.style-standard::before,
    &.style-overlay::before {
     background-color: var(--information-fg);
    }

    &.style-inline {
      border: none;
      align-items: center;
    }

    &.style-overlay {
      box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3), 0 4px 8px -2px rgba(0, 21, 44, 0.2);
    }

    & .bannerIcon {
      color: var(--information-fg);
    }
  }

  &.type-success {
    &.style-standard {
       box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3);
    }

    &.style-standard::before,
    &.style-overlay::before{
       background-color: var(--ok-fg);
     }

    &.style-inline {
      border: none;
      align-items: center;
    }

    &.style-overlay {
      box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3), 0 4px 8px -2px rgba(0, 21, 44, 0.2);
    }

    & .bannerIcon {
      color: var(--ok-fg);
    }
  }

  &.type-error {
    &.style-standard {
       box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3);
    }

    &.style-standard::before,
    &.style-overlay::before{
       background-color: var(--danger-fg);
    }

    &.style-inline {
      border: none;
      align-items: center;
    }

    &.style-overlay {
      box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3), 0 4px 8px -2px rgba(0, 21, 44, 0.2);
    }

    & .bannerIcon {
      color: var(--danger-fg);
    }
  }

  &.type-warning {
    &.style-standard {
       box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3);
    }

    &.style-standard::before,
    &.style-overlay::before  {
       background-color: var(--warning-fg);
     }

    &.style-inline {
      border: none;
      align-items: center;
    }

    &.style-overlay {
      box-shadow: 0 0 2px 0 rgba(0, 21, 44, 0.3), 0 4px 8px -2px rgba(0, 21, 44, 0.2);
    }

    & .bannerIcon {
      color: var(--warning-fg);
    }
  }
}

.iconMessageContainer {
  display: flex;
  width: 100%;
}

.bannerIcon {
  height: 16px;
  font-size: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.spacer {
  width: 8px;
  flex-shrink: 0;
}

.textBox {
  width: 100%;
}

.message {
  line-height: 18px;
  color: var(--neutral-400);
}

.description {
  line-height: 16px;
  color: var(--neutral-400);
}

.clearIcon {
  height: 16px;
  width: 16px;
  cursor: pointer;
  color: var(--neutral-300);
  margin-left: 24px;

  &:hover {
    background-color: var(--secondary);
  }
}

